--- a/chat_app_client/android/app/src/main/AndroidManifest.xml
+++ b/chat_app_client/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.guilhermecallandprojects.chat_app_client">
    <application
-        android:label="chat_app_client"
+        android:label="Cool Chat"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
