--- a/chat_app_client/pubspec.yaml
+++ b/chat_app_client/pubspec.yaml
@@ -11,10 +11,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.2
+
+  # connection
   socket_io_client: ^1.0.2
+
+  # state management
   provider: ^6.0.2
+
+  # stored data
+  shared_preferences: ^2.0.12
+
+  # app design
   animated_text_kit: ^4.2.1
   google_fonts: ^2.2.0
 
